...
            }
        }
    }
}

sealed class BrowserToolbarTestTags(val id: String) {
    val testTag: String = "${BrowserToolbarTestTags::class.java.name}#$id"
    object Toolbar : BrowserToolbarTestTags(
        id = "toolbar",
    )
    object OpenTabsButton : BrowserToolbarTestTags(
        id = "open_tabs_button",
    )
...
